--- a/styles/newGame.css
+++ b/styles/newGame.css
@@ -39,6 +39,7 @@
     border-radius: 8px;
     padding: 1.6rem;
     width: 100%;
+    height: 5.6rem;
 }
 
 .inputName::placeholder {
@@ -51,6 +52,7 @@
     border-radius: 8px;
     padding: 1.6rem;
     width: 100%;
+    height: 5.6rem;
     text-shadow: 1px 1px 2px #0008;
     transition: filter 200ms;
     margin-top: 1.6rem;
